Lots of small tweaks